--- a/mscore/manual/sources/MuseScore-pl.html
+++ b/mscore/manual/sources/MuseScore-pl.html
@@ -4,16 +4,16 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title></title>
-    <script type="text/javascript" src="/sites/musescore.org/files/js/js_f0f5511aedbf456e3c208f899dccad81.js"></script>
+    <script type="text/javascript" src="/sites/musescore.org/files/js/js_ce72fbeff534b26c1e273f86d4baba36.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
-jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip|dmg|mscz|mscx|bz2"},"musescore":{"ytlang":"pl"}});
+jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip|dmg|mscz|mscx|bz2"},"syntaxhighlighter":null,"musescore":{"ytlang":"pl"}});
 //--><!]]>
 </script>
     <meta name='robots' content='noindex, nofollow' />
     <base href='http://musescore.org/pl/podr%C4%99cznik/podr%C4%99cznik' />
     <link rel='shortcut icon' href='/sites/musescore.org/files/amadou_favicon_11.ico' type='image/x-icon' />
-    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_24fa6a135f20a7079098997ecc96781a.css" />
+    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_7a9b6f1933da8fa179e4a30a4e44b0c7.css" />
   </head>
   <body>
         <div class="print-logo"><img class='print-logo' src='/sites/musescore.org/files/musescore-logo.png' alt='' />
@@ -21,7 +21,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoin
     <div class="print-slogan">Wolne oprogramowanie do komponowania i notacji muzycznej</div>
     <p></p>
     <hr class="print-hr" />
-    <div class="print-site_name">Retrieved from <a href="http://musescore.org/pl">http://musescore.org</a> on pn, 03/05/2012</div>
+    <div class="print-site_name">Retrieved from <a href="http://musescore.org/pl">http://musescore.org</a> on pn, 03/12/2012</div>
     <h1 class="print-title"></h1>
     <div class="print-submitted"></div>
     <div class="print-created"></div>
@@ -582,7 +582,7 @@ Początek podbelki: <img src="/sites/musescore.org/files/beambutton4_1.png" alt=
 (W wersji 0.9.3 i wcześniejszych, użyj skrótu <kbd><kbd>Shift</kbd>+<kbd>S</kbd></kbd>.)</p>
 <p><img src="/sites/musescore.org/files/tie2_0.png" alt="Ligatura do następnej nuty" title="Ligatura do następnej nuty" width="136" height="78" class="inline" /></p>
 <h3>Druga metoda</h3>
-<p>Aby utworzyć ligaturę w <samp class="mode"><a href="http://musescore.org/pl/podręcznik/wpisywanie-nut" title="Wpisywanie nut">trybie wpisywania nut</a></samp>, naciśnij <kbd><kbd>+</kbd></kbd> za pierwszą nutą danego wiązania.  W wersji 0.9.3 i wcześniejszych musisz nacisnąć <kbd><kbd>+</kbd></kbd>, zanim wpiszesz pierwszą nutę.</p>
+<p>Aby utworzyć ligaturę w <samp class="mode"><a href="http://musescore.org/pl/podręcznik/wpisywanie-nut" title="Wpisywanie nut">trybie wpisywania nut</a></samp>, wciśnij <kbd><kbd>+</kbd></kbd> za pierwszą nutą danego wiązania.  W wersji 0.9.3 i wcześniejszych musisz wcisnąć <kbd><kbd>+</kbd></kbd>, zanim wpiszesz pierwszą nutę.</p>
   </div>
 <div id="node-2811" class="section-3">
   <h1 class="book-heading">Linie</h1>
@@ -844,7 +844,7 @@ Wciskając przycisk "Odtwarzaj" <img src="/sites/musescore.org/files/play.png" a
 <li>Przewiń do początku partytury: <kbd><kbd>Home</kbd></kbd></li>
 <li>Przełącz pokaż/ukryj panel odtwarzania: <kbd><kbd>F11</kbd></kbd></li>
 </ul>
-<p>Naciśnij przycisk odtwarzania ponownie, aby zatrzymać i opuścić <samp class="mode">tryb odtwarzania</samp>.</p>
+<p>Wciśnij przycisk odtwarzania ponownie, aby zatrzymać i opuścić <samp class="mode">tryb odtwarzania</samp>.</p>
 <p>MuseScore rozpoczyna odtwarzanie od miejsca, w którym poprzednio je zakończył. Jeśli zaznaczysz nutę, to MuseScore rozpocznie ponowne odtwarzanie od niej. Pasek narzędziowy posiada również przycisk przewijania, aby szybko powrócić do początku partytury, w celu jej odtworzenia.</p>
 <h3>Panel odtwarzania</h3>
 <p>Panel odtwarzania umożliwia większą kontrolę, m.in. nad tempem, pozycją startową i ogólną głośnością. Z głównego menu wybierz <kbd><samp class="menu">Widok</samp> → <samp class="menuitem">Panel odtwarzania</samp></kbd>.</p>
@@ -1133,7 +1133,7 @@ Dla krótkich, ogólnych napisów używaj tekstu systemowego lub tekstu pięciol
 <p><img src="/sites/musescore.org/files/tworzenie-glosow-3_1.png" alt="W prawym panelu okna &quot;Wyciągi głosów&quot;, właściwości pierwszego głosu są teraz ustalone" title="W prawym panelu okna &quot;Wyciągi głosów&quot;, właściwości pierwszego głosu są teraz ustalone" width="440" height="246" class="inline" /></li>
 <li>Powtórz kroki 2-4 dla każdej kolejnej partii.
 <p><img src="/sites/musescore.org/files/tworzenie-glosow-4_1.png" alt="W tym przykładzie wszystkie cztery instrumenty są teraz wypisane w lewym panelu okna &quot;Wyciągi głosów&quot;" title="W tym przykładzie wszystkie cztery instrumenty są teraz wypisane w lewym panelu okna &quot;Wyciągi głosów&quot;" width="440" height="246" class="inline" /></li>
-<li>Kiedy skończysz, naciśnij <kbd><samp>Zamknij</samp></kbd> w celu wyjścia z okna "Wyciągi głosów".</li>
+<li>Kiedy skończysz, kliknij <kbd><samp>Zamknij</samp></kbd> w celu wyjścia z okna "Wyciągi głosów".</li>
 </ol>
 <p>Skończyłeś/aś właśnie definiować Twoje wyciągi. Nie ma więcej potrzeby powtarzać tych czynności, chyba że w celu wprowadzenia zmian lub poprawek. W obecnej wersji MuseScore nie jest możliwe rozdzielanie pojedynczej pięciolinii zawierającej dwa lub więcej głosów do osobnych wyciągów. Każdy instrument, który chcesz wydrukować na osobnym arkuszu musi zatem być zapisany na oddzielnej pięciolinii w partyturze. Należy zatem dobrze zaplanować układ instrumentów.</p>
 <h3 id="tworzenie-wyciągów">Tworzenie wyciągów</h3>
@@ -1141,7 +1141,7 @@ Dla krótkich, ogólnych napisów używaj tekstu systemowego lub tekstu pięciol
 <ol>
 <li>Z głównego menu wybierz ponownie <kbd><samp class="menu">Plik</samp> → <samp class="menuitem">Wyciągi głosów...</samp></kbd>.</li>
 <li>W lewym panelu zaznacz głos, który chcesz utworzyć i obejrzeć.</li>
-<li>Naciśnij <kbd><samp>Utwórz głos</samp></kbd> i do głównego okna MuseScore dodanie zostanie nowa zakładka, zawierająca utworzony właśnie wyciąg głosu.</li>
+<li>Wciśnij <kbd><samp>Utwórz głos</samp></kbd> i do głównego okna MuseScore dodanie zostanie nowa zakładka, zawierająca utworzony właśnie wyciąg głosu.</li>
 </ol>
 <p>Powtórz kroki 2-4 dla każdego z wyciągów, które chcesz przejrzeć lub wydrukować. Jeśli dokonasz jakichkolwiek zmian w partyturze, możesz je ponownie utworzyć, aby nanieść w nich wprowadzone w międzyczasie zmiany.</p>
 <h3 id="zapisywanie">Zapisywanie</h3>
@@ -1255,7 +1255,7 @@ Inne ustawienia (palety, sesje...) są w: <code>~/Library/Application Support/Mu
 Aby rozwiązać ten problem należy:</p>
 <ol>
 <li>W Macu przejść do Finder -&gt; Idź -&gt; Programy -&gt; Album z czcionkami.</li>
-<li>Wybrać jedną z czcionek i nacisnąć <kbd><kbd>Cmd</kbd>+<kbd>A</kbd></kbd> w celu zaznaczenia wszystkich czcionek.</li>
+<li>Wybrać jedną z czcionek i wcisnąć <kbd><kbd>Cmd</kbd>+<kbd>A</kbd></kbd> w celu zaznaczenia wszystkich czcionek.</li>
 <li>Przejść do Plik -&gt; Sprawdź poprawność czcionek.</li>
 <li>Jeśli któraś z czcionek wykazuje uszkodzenia lub jakieś inne problemy, należy ją zaznaczyć i usunąć.</li>
 <li>W razie potrzeby zrestartować MuseScore.</li>
